kube/manifestsv2/blog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsablog
spec:
  finalizers:
  - kubernetes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsablog
  namespace: rsablog
  labels:
    app: rsablog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsablog
  template:
    metadata:
      labels:
        app: rsablog
    spec:
      containers:
      - name: rsablog
        image: rsalmond/blog:0.0.1
        ports:
        - containerPort: 2370
        volumeMounts:
        - name: config
          mountPath: /config
        - name: content
          mountPath: /blog/content
      volumes:
        - name: config
          configMap:
            name: rsablog
        - name: content
          persistentVolumeClaim:
            claimName: rsablog

---

apiVersion: v1
kind: Service
metadata:
  name: rsablog
  namespace: rsablog
spec:
  ports:
  - port: 2370
    name: http
  selector:
    app: rsablog

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rsablog
  namespace: rsablog
spec:
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  hosts:
  - test.salmond.ca
  http:
  - name: rsablog
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: rsablog.rsablog.svc.cluster.local
        port:
          number: 2370
