kube/manifestsv2/hello-vs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyhello
  labels:
    app: pyhello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyhello
  template:
    metadata:
      labels:
        app: pyhello
    spec:
      containers:
      - name: pyhello
        image: python:latest
        ports:
        - containerPort: 8000
        command: ["python"]
        args: ["-m", "http.server"]

---

apiVersion: v1
kind: Service
metadata:
  name: pyhello
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: pyhello

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rsatest
spec:
  gateways:
  - istio-system/istio-autogenerated-k8s-ingress
  hosts:
  - test.salmond.ca
  http:
  - name: rsatest
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: pyhello.default.svc.cluster.local
        port:
          number: 8000
