kube/manifestsv2/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyhello
  labels:
    app: pyhello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pyhello
  template:
    metadata:
      labels:
        app: pyhello
    spec:
      containers:
      - name: pyhello
        image: python:latest
        ports:
        - containerPort: 8000
        command: ["python"]
        args: ["-m", "http.server"]

---

apiVersion: v1
kind: Service
metadata:
  name: pyhello
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: pyhello

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: pyhello
spec:
  rules:
    - host: "test.salmond.ca"
      http:
        paths:
          - path: /
            backend:
              serviceName: pyhello
              servicePort: 8000
